apps/sample-app/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-app
spec:
  selector:
    deployment: sample-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
