apps/sample-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sample-app
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
